--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.1",
     "@types/ioredis": "^4.0.18",
     "@types/node": "^12.11.1",
-    "@types/socket.io": "^2.1.4"
+    "@types/socket.io": "^2.1.4",
+    "typescript": "^3.6.4"
   }
 }
