--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ioredis": "^4.14.1",
+    "mongodb": "^3.3.3",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
