--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.1",
     "@types/ioredis": "^4.0.18",
+    "@types/mongodb": "^3.3.6",
     "@types/node": "^12.11.1",
     "@types/socket.io": "^2.1.4",
     "typescript": "^3.6.4"
